[package]
name = "hunter2"
version = "0.1.0"
edition = "2021"
authors = ["Sasha Pourcelot <sasha.pourcelot@iomentum.com>"]
description = "Hide fields from the debug representation of data structures"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hunter2-proc-macros = { path = "./hunter2-proc-macros/" }

[dev-dependencies]
trybuild = "1.0"
